# wechat-enterprise-bot

./: .pre-commit-config.yaml  README.md  pyproject.toml
app/: main.py
app/utils/wechat_util/: WXBizMsgCrypt.py
