[project]
name = "wechat-enterprise-bot"
version = "0.0.1"
description = "Default template for PDM package"
authors = [{ name = "LumonsSync", email = "colorautumn@outlook.com" }]
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.2",
    "httpx>=0.28.1",
    "pydantic>=2.11.4",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "AGPL3.0" }


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "uvicorn app.main:app --reload"

[dependency-groups]
dev = ["ruff>=0.11.8", "pre-commit>=4.2.0"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "F",     # Pyflakes
    "W",     # pycodestyle warnings
    "E",     # pycodestyle errors
    "I",     # isort
    "UP",    # pyupgrade
    "ASYNC", # flake8-async
    "C4",    # flake8-comprehensions
    "T10",   # flake8-debugger
    "T20",   # flake8-print
    "PYI",   # flake8-pyi
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RUF",   # Ruff-specific rules
]
ignore = [
    "E402",   # module-import-not-at-top-of-file
    "UP037",  # quoted-annotation
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
extra-standard-library = ["typing_extensions"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
