[project]
name = "wechat-enterprise-bot"
version = "0.0.1"
description = "Default template for PDM package"
authors = [{ name = "LumonsSync", email = "colorautumn@outlook.com" }]
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.2",
    "httpx>=0.28.1",
    "pydantic>=2.11.4",
    "pycryptodome>=3.22.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "AGPL3.0" }

[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "uvicorn app.main:app --reload"

[dependency-groups]
dev = ["ruff>=0.11.8", "pre-commit>=4.2.0"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "W",
    "W291",
    "E",
    "UP",
    "I",
    "C4",
    "T10",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RUF",
    "E501",
]
ignore = ["E402", "UP037", "RUF001", "RUF002", "RUF003"]
unfixable = ["F401"] # 对无法自动修复的规则单独处理

[tool.ruff.format]
indent-style = "space" # 强制使用空格而非制表符

[tool.ruff.lint.isort]
force-sort-within-sections = true
extra-standard-library = ["typing_extensions"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
